--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1> <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a>
+      <h1>Refresh Me</h1>
+      <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a>
 
       <div class="dice">
         <p>Player 1</p>
