--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></h1>
+      <h1>Refresh Me <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></h1> < <button type="button">Play Again!</button> 
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="images/dice6.png">
