--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a><
+    <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a>
     Eagan Farlin© 
   </footer>
 </html>
