--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   </body>
 
   <footer>
-    <a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a>
-    </br>
-    Eagan Farlin© 
+    <p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p>
+    <p>Eagan Farlin©</p> 
   </footer>
 </html>
