--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 
   <footer>
     <p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p>
-    <p>Eagan Farlin©</p> 
+    <p id="c">Eagan Farlin©</p> 
   </footer>
 </html>
