--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="container">
       <h1>Refresh Me</h1>
+      <h2><p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p></h2>
       <div class="dice">
         <p>Player 1</p>
         <img class="img1" src="images/dice6.png">
@@ -28,7 +29,6 @@
   </body>
 
   <footer>
-    <p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p>
     <p id="c">Eagan Farlin©</p> 
   </footer>
 </html>
