--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <title>Dice</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -29,6 +29,6 @@
 
   <footer>
     <p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p>
-    <p id="c">Eagan Farlin©</p> 
+    <p id="c">©Eagan Farlin</p>
   </footer>
 </html>
