Fixed 2 bugs ty @agent255.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
+
     <meta charset="utf-8">
     <title>Dice</title>
     <link rel="stylesheet" href="styles.css">
@@ -23,12 +25,13 @@
 
     </div>
 
+    <footer>
+    <p><a href="/" src="Play Again?">Play Again?</a></p>
+    <p id="c">©Eagan Farlin</p>
+    </footer>
+
     <script src="index.js" charset="utf-8"></script>
 
   </body>
 
-  <footer>
-    <p><a href="https://cyber1012.github.io/Dice/" src="Play Again?">Play Again?</a></p>
-    <p id="c">©Eagan Farlin</p>
-  </footer>
 </html>
